--- a/Style.css
+++ b/Style.css
@@ -3,5 +3,30 @@ body{
 }
 nav{
 border: 2px solid green;
-padding: 3vmax;
+height: 3vmax;
+display: flex;
+
+}
+.left{
+    width: 20%;
+    border: 2px solid chocolate;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+.left>a{
+text-decoration:none;
+color: crimson;
+font-size: 2vmax;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.middle{
+    width: 60%;
+    border: 2px solid salmon;
+
+}
+.right{
+    width: 20%;
+    border: 2px solid red;
 }
