all products are added

--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,6 @@
+*{
+    scroll-behavior: smooth;
+}
 body{
     margin:0;
 }
@@ -6,7 +9,10 @@ box-shadow: 0 0 10px rgba(0, 0, 0, 0.808);
 height: 4vmax;
 display: flex;
 align-items: center;
-
+position:sticky;
+top: 0%;
+background-color: white;
+z-index: 100000;
 }
 .left{
     width: 20%;
@@ -59,14 +65,14 @@ justify-content: center;
     
 }
 .home{
-    border: 1px solid crimson;
+    /* border: 1px solid crimson; */
     height: 90vh;
     background-image: linear-gradient(to right,rgb(243, 245, 245),rgb(224, 224, 236));
     display: flex;
 
 }
 .container{
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
   
     width: 100%;
   
@@ -119,3 +125,58 @@ margin: 0;
     color: white;
     cursor: pointer;
 }
+/* 
+
+products sections 
+*/
+#products{
+ 
+    height: 100vh;
+  
+}
+#products>h1{
+   text-align: center;
+   margin: 5vmax auto;
+   font-size: 2vmax;
+   border-bottom: 3px solid crimson;
+   padding: 1vmax;
+   width: 25vw;
+}
+.productsContainer{
+    display: flex;
+    /* background-color: aquamarine; */
+    flex-wrap: wrap;
+    height: 100%;
+   max-width:80vw;
+   margin: auto;
+   justify-content: space-evenly;
+   justify-content: center;
+}
+/* products ------------------- */
+.product{
+    /* border: 2px solid greenyellow; */
+    transition: all 0.3s;
+    cursor: pointer;
+    width: 20vmax;
+    /* height: 22vmax; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin: 1px; */
+}
+.product>img{
+   
+    width: 15vmax;
+    height: 25vmax;
+
+}
+.product>h4{
+margin: 0;
+}
+.product>h5{
+    margin: 0;
+}
+.product:hover{
+    transform:translateY(-2px);
+}
+/* product----------------- */
