--- a/Style.css
+++ b/Style.css
@@ -61,7 +61,8 @@ justify-content: center;
 .right>img{
     width: 1.4vmax;
     display: flex;
-    
+    margin: 1vmax;
+    cursor: pointer;
     
 }
 .home{
@@ -99,10 +100,17 @@ justify-content: center;
 }
 #leftContainer>h1{
     margin-left: 2%;
-margin: 0;
+/* margin: 0; */
+color: black;
  font-size: 4vmax;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+/* #leftContainer>h1{
+    
+margin: 0;
+ font-size: 4vmax;
+ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+} */
 #leftContainer>h2{
     margin-left: 2%;
     margin-top: -2%;
@@ -112,7 +120,6 @@ margin: 0;
 #leftContainer>h4{
     font-size: 1vmax;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
 
 
 }
@@ -130,13 +137,14 @@ margin: 0;
 products sections 
 */
 #products{
- 
+    
     height: 100vh;
   
 }
 #products>h1{
    text-align: center;
    margin: 5vmax auto;
+   color:crimson;
    font-size: 2vmax;
    border-bottom: 3px solid crimson;
    padding: 1vmax;
@@ -180,3 +188,60 @@ margin: 0;
     transform:translateY(-2px);
 }
 /* product----------------- */
+footer{
+   margin-top: 20vmax;
+    /* height: 10vmax; */
+    padding: 2vmax;
+    background-color:rgb(53, 44, 44);
+    display: flex;
+    /* justify-content: space-evenly; */
+    
+}
+.leftFooter{
+    width: 20%;
+    /* border: 2px solid crimson; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+
+}
+.leftFooter>h4{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.leftFooter>p{
+    align-items: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.leftFooter>img{
+    width: 10vmax;
+    margin: 1vmax;
+    cursor: pointer;
+}
+.middleFooter{
+    width: 60%;
+    /* border: 2px solid crimson; */
+
+}
+.rightFooter{
+    width: 20%;
+    /* border: 2px solid crimson; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.rightFooter>h4{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-decoration: underline;
+}
+.rightFooter>a{
+    text-decoration: none;
+    color: white;
+    margin: 1vmax;
+    font-size: large;
+}
+.middleFooter>p,h1{
+    text-align: center;
+    color: white;
+}
